# Markdown-Converter

./: .gitignore  README.md  pyproject.toml  setup.py
.github/workflow/: lint_code.yaml
docs/input/: main.html
docs/output/: output.md
markdown_converter/: cli.py  core.py  utils.py
